--- a/src/components/Bar/Bar.scss
+++ b/src/components/Bar/Bar.scss
@@ -1,7 +1,7 @@
 
 .bar-card {
   display: flex;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   padding: 5px;
   background: #E9E0D6;
 
@@ -11,6 +11,9 @@
 
   .title {
     flex: 1 1 auto;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     .bar-name {
       padding-top: 5px;
@@ -28,9 +31,8 @@
   .bar-info-container {
     font-size: 20px;
     text-align: center;
-    flex: 0 1 auto;
-    width: 20px;
-    margin: 10px;
+    flex: 0 0 20px;
+    margin: 10px 5px;
     border: 2px solid black;
     border-radius: 90px;
   }
